--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -1,7 +1,7 @@
 <header>
-    <nav class="navbar fixed-top navbar-dark navbar-expand-md bg-success text-white">
+    <nav class="navbar fixed-top navbar-dark navbar-expand-md bg-dark text-white">
     <a class="text-white navbar-brand" href="/">
-        <i class="fab fa-pagelines"></i>Organic store
+        <i class="fas fa-cogs"></i> Repuestos la bayadera
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -9,17 +9,17 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto menu">
             <li class="nav-item active">
-                <a href="/" class="nav-link">Home</a>
+                <a href="/" class="nav-link">Tienda</a>
             </li>
         </ul>
         <form action="form-inline mt-2 mt-md-0">
             <a href="#" class="text-white nav-link">
                 <i id="cart_n"class="text-warning fas fa-shopping-cart">
 
-                </i>Shopping cart
+                </i>Carrito de Compras
             </a>
             <a href="/admin" class="nav-link disable text-white">
-                <i class="far fa-user"></i>Administrator
+                <i class="far fa-user"></i>Administrador
             </a>
         </form>
 
@@ -37,10 +37,10 @@
                         <thead>
                             <tr>
                                 <th scope="col">#</th>
-                                <th scope="col">Product</th>
-                                <th scope="col">Description</th>
-                                <th scope="col">Quantity</th>
-                                <th scope="col">Price</th>
+                                <th scope="col">Producto</th>
+                                <th scope="col">Descripcion</th>
+                                <th scope="col">Cantidad</th>
+                                <th scope="col">Precio</th>
                             </tr>
                         </thead>
                         <tbody id="table"> 
