--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -1,6 +1,6 @@
-<nav class="navbar fixed-top navbar-dark navbar-expand-md bg-success text-white">
+<nav class="navbar fixed-top navbar-dark navbar-expand-md bg-dark text-white">
     <a class="text-white navbar-brand" href="/">
-        <i class="fab fa-pagelines"></i>Organic store
+        <i class="fas fa-cogs"></i> Repuestos la bayadera
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -16,13 +16,15 @@
     <main role="main">
         <div class="row">
             <div class="col">
-                <h1>Orders</h1>
+                <br>
+                <br>
+                <h1>Pedidos</h1>
                 <div class="table-responsive-sm">
                     <table class="table table-striped">
                         <thead>
                             <tr>
                                 <th>Id</th>
-                                <th>Order</th>
+                                <th>Pedido</th>
                                 <th>Total</th>
                                 <th></th>
                             </tr>
@@ -34,8 +36,8 @@
                                     <td>{{this.order}}</td>
                                     <td>{{this.total}}</td>
                                     <td>
-                                        <a class="btn btn-primary" href="/order/{{this._id}}">Update</a>
-                                        <a class="btn btn-danger" href="/order/delete/{{this._id}}">Delete</a>
+                                        <a class="btn btn-primary" href="/order/{{this._id}}">Actualizar</a>
+                                        <a class="btn btn-danger" href="/order/delete/{{this._id}}">Eliminar</a>
                                     
                                     </td>
                                 </tr>
