--- a/views/mainLayout.hbs
+++ b/views/mainLayout.hbs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/d2b43546e3.js" crossorigin="anonymous"></script>
-    <title>Organic store</title>
+    <title>repuestos La bayadera</title>
 </head>
 <body>
     
