--- a/views/menu.hbs
+++ b/views/menu.hbs
@@ -1,7 +1,7 @@
 <header>
-    <nav class="navbar fixed-top navbar-dark navbar-expand-md bg-success text-white">
+    <nav class="navbar fixed-top navbar-dark navbar-expand-md bg-dark text-white">
     <a class="text-white navbar-brand" href="/">
-        <i class="fab fa-pagelines"></i>Organic store
+        <i class="fas fa-cogs"></i>Repuestos la bayadera
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -9,20 +9,20 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto menu">
             <li class="nav-item active">
-                <a href="#" class="nav-link">Home</a>
+                <a href="#" class="nav-link">Tienda</a>
             </li>
             <li class="nav-item active">
-                <a href="#fruit" class="nav-link">Fruits</a>
+                <a href="#fruit" class="nav-link">Productos</a>
             </li>
         </ul>
         <form action="form-inline mt-2 mt-md-0">
             <a href="/cart" class="text-white nav-link">
                 <i class="text-warning fas fa-shopping-cart">
 
-                </i>Shopping cart <i style="color:yellow" id="cart_n"></i>
+                </i>Carrito de Compras <i style="color:yellow" id="cart_n"></i>
             </a>
             <a href="/admin" class="nav-link text-white">
-                <i class="far fa-user"></i>Administrator
+                <i class="far fa-user"></i>Administrador
             </a>
         </form>
 
@@ -34,9 +34,9 @@
     <div class="container marketing">
         <br>
         <br>
-        <h2 id="fruit">Fruits</h2>
+        <h2 id="fruit">Tienda</h2>
         <hr>
-        <div class="row" id="fruitDIV"></div>
+        <div class="row" id="productosDIV"></div>
     </div>
 
 
