--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -13,6 +13,8 @@
             </li>
         </ul>
         <form action="form-inline mt-2 mt-md-0">
+            <a href="/users/signin" class="text-white nav-link"><i class="far fa-user">Login</i></a>
+             <a href="/users/signup" class="text-white nav-link"><i class="far fa-user">Crear cuenta</i></a>
             <a href="#" class="text-white nav-link">
                 <i id="cart_n"class="text-warning fas fa-shopping-cart">
 
@@ -28,6 +30,10 @@
 </header>
 <br>
 <br>
+<br>
+<br>
+<br>
+
 <div class="container mt-5">
     <main role="main">
         <div class="row">
