--- a/views/menu.hbs
+++ b/views/menu.hbs
@@ -11,11 +11,11 @@
             <li class="nav-item active">
                 <a href="#" class="nav-link">Tienda</a>
             </li>
-            <li class="nav-item active">
-                <a href="#fruit" class="nav-link">Productos</a>
-            </li>
+          
         </ul>
         <form action="form-inline mt-2 mt-md-0">
+            <a href="/users/signin" class="text-white nav-link"><i class="far fa-user">Login</i></a>
+             <a href="/users/signup" class="text-white nav-link"><i class="far fa-user">Crear cuenta</i></a>
             <a href="/cart" class="text-white nav-link">
                 <i class="text-warning fas fa-shopping-cart">
 
