--- a/views/mainLayout.hbs
+++ b/views/mainLayout.hbs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/styles.css">
     <script src="https://kit.fontawesome.com/d2b43546e3.js" crossorigin="anonymous"></script>
     <title>repuestos La bayadera</title>
 </head>
@@ -12,6 +13,8 @@
     
 
     <div class="container">
+        {{> messages}}
+        {{> errors}}
         {{{body}}}
         </div>
     
