--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -20,9 +20,6 @@
 
                 </i>Carrito de Compras
             </a>
-            <a href="/admin" class="nav-link disable text-white">
-                <i class="far fa-user"></i>Administrador
-            </a>
         </form>
 
     </div>
@@ -43,7 +40,7 @@
                         <thead>
                             <tr>
                                 <th scope="col">#</th>
-                                <th scope="col">Producto</th>
+                                <th scope="col">Productos</th>
                                 <th scope="col">Descripcion</th>
                                 <th scope="col">Cantidad</th>
                                 <th scope="col">Precio</th>
