--- a/views/menu.hbs
+++ b/views/menu.hbs
@@ -21,9 +21,7 @@
 
                 </i>Carrito de Compras <i style="color:yellow" id="cart_n"></i>
             </a>
-            <a href="/admin" class="nav-link text-white">
-                <i class="far fa-user"></i>Administrador
-            </a>
+            
         </form>
 
     </div>
@@ -34,7 +32,7 @@
     <div class="container marketing">
         <br>
         <br>
-        <h2 id="fruit">Tienda</h2>
+        <h2 id="tienda">Tienda</h2>
         <hr>
         <div class="row" id="productosDIV"></div>
     </div>
